--- a/custom_components/device_maker/manifest.json
+++ b/custom_components/device_maker/manifest.json
@@ -2,9 +2,9 @@
     "domain":"device_maker",
     "name":"Device Maker",
     "codeowners": ["@AdarWa"],
-    "iot_class":"local_polling",
+    "config_flow": true,
     "documentation": "https://github.com/AdarWa/device_maker",
+    "iot_class":"local_polling",
     "issue_tracker": "https://github.com/AdarWa/device_maker/issues",
-    "version": "1.0.0",
-    "config_flow": true
+    "version": "1.0.0"
 }
